Contact to Ubuntu

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,9 +16,6 @@
     },
     "rules": {
         "linebreak-style": 0,
-        "indent": [
-            "error",
-            4
-        ]
+        "indent": 0
     }
 }
