--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,16 @@
 {
     "env": {
         "browser": true,
-        "commonjs": true,
         "es6": true
     },
-    "extends": [
-        "airbnb-base"
-    ],
+    "extends": "eslint:recommended",
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
     "parserOptions": {
-        "ecmaVersion": 11
+        "ecmaVersion": 2018,
+        "sourceType": "module"
     },
-    "rules": {
-        "linebreak-style": 0,
-        "indent": 0
-    }
+    "rules": {}
 }
